# luckydep

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/luckydep/: __init__.py
tests/: test_luckydep.py
